Mobile controls implemented

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "windchimes",
-  "homepage": "https://adam-salah-ets.github.io/windchimes/",
+  "homepage": "https://adam-salah.github.io/windchimes/",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.1.1",
   "type": "module",
 "scripts": {
     "dev": "vite",
