--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "version": "0.1.1",
   "type": "module",
-"scripts": {
+  "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
@@ -13,14 +13,13 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@react-three/fiber": "^8.17.12",
+    "@react-three/fiber": "^9.1.2",
+    "@react-three/rapier": "^2.1.0",
     "@tailwindcss/vite": "^4.0.5",
-    "gh": "^2.8.9",
     "gh-pages": "^6.3.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "tailwindcss": "^4.0.5",
-    "three": "^0.172.0"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "tailwindcss": "^4.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
